# Ten-second

./: README.md
Module3-1/: AGENTS.md  Module3-1.md  pyproject.toml
Module3-1/module_3_1/: __init__.py  clause_segmenter.py  cli.py  schemas.py
Module3-1/samples/: sample_lease_contract.txt
Module3-1/tests/: test_segmenter.py
Module3-2/: AGENTS.md  Module3-2.md
Module3-2/data/: ontology_lease.json  synonyms_ko.json
Module3-2/module_3_2/: cli.py  ontology_mapper.py  schemas.py
Module3-2/samples/: clauses_from_3_1.json
Module3-2/tests/: test_mapper.py
Module3-3/: AGENTS.md  Module3-3.md
Module3-3/module_3_3/: __init__.py  cli.py  compiler.py  exceptions.py  loader.py  models.py  pipeline.py  validators.py
Module3-3/samples/: demo_rules.json
Module3-3/tests/: test_pipeline.py
Module3-4/: AGENTS.md  Module3-4.md
Module3-4/module_3_4/: __init__.py  cli.py  engine.py  fastpath.py  numeric_table.py  schemas.py  syntax.py  utils.py
Module3-4/tests/: test_engine.py
Module3-5/: AGENTS.md  Module3-5.md
Module3-5/module_3_5/: cli.py  extractor.py  schemas.py
Module3-5/samples/: clauses.json  hits.json
Module3-5/tests/: test_extractor.py
Module3-6/: AGENTS.md  Module3-6.md
Module3-6/module_3_6/: __init__.py  aggregator.py  calibrator.py  cli.py  risk_scorer.py  schemas.py
Module3-6/samples/: hits.json  policy.json  ruleset_runtime.json
Module3-6/tests/: test_scoring.py
Module3-7/: AGENTS.md  Module3-7.md
Module3-7/module_3_7/: cli.py  policy.py  resolver.py  schemas.py
Module3-8/: AGENTS.md  Module3-8.md
Module3-9/: AGENTS.md
(+21 files in other folders)
